# from_notion_to_mf

./: .env.example  .gitignore  CLAUDE.md  README.md  invoices_export.json  pyproject.toml  requirements.txt  test_output.csv  test_output.json
.claude/: settings.local.json
src/: __main__.py  main.py
src/cli/: commands.py  formatters.py
src/mappers/: invoice_mapper.py
src/models/: invoice.py  training_project.py
src/services/: moneyforward.py  notion.py
src/utils/: auth.py  config.py  exceptions.py  logger.py
